remove IPBES references

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="lawsafrica-site-header">
   <div class="container">
-    <a href="https://www.ipbes.net">
-      <img alt="An IPBES project" src="/img/logo.svg" width="150px">
+    <a href="https://mykahawa.org">
+      <img alt="MyKahawa" src="/img/logo.svg" width="150px">
     </a>
   </div>
 </header>
@@ -11,8 +11,8 @@
 
     <div class="container">
       <a class="navbar-brand mr-5" href="/">
-        <div class="d-none d-sm-block">IPBES</div>
-        <div class="d-block d-sm-none">Documents</div>
+        <div class="d-none d-sm-block">MyKahawa</div>
+        <div class="d-block d-sm-none">Database</div>
       </a>
 
       <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
