--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item mr-3">
-            <a class="nav-link" href="/growwers.html">Growers</a>
+            <a class="nav-link" href="/growers.html">Growers</a>
           </li>
           <li class="nav-item mr-3">
             <a class="nav-link" href="/dealers.html">Dealers</a>
