tweaks to footer, add json

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,17 +5,9 @@
            <div class="col-lg-4 mb-5 mb-lg-0">
               <h2 class="logo-brand-footer">MyKahawa</h2>
               <p class="u-my-40">
-                 MyKahawa is a Wasisi Investment Company Ltd Venture designed for coffee farmers, buyers, and researchers to access Kenya coffee market information. Founded in 2015, MyKahawa is a Kenya Coffee business analytics and market intelligence tool that allows greater transparency and visibility into the Kenya Coffee market and industry.
+                 MyKahawa is a Kenya Coffee business analytics and market intelligence tool that allows greater transparency and visibility into the Kenya Coffee market and industry.
               </p>
 
-           </div>
-           <div class="col-lg-2 col-md-6 ml-auto mb-5 mb-lg-0">
-              <h4>Useful Links</h4>
-              <div class="u-h-4 u-w-50 bg-primary rounded mt-3 u-mb-40"></div>
-              <ul class="list-unstyled u-lh-2">
-                 <li><a href="https://wasisivillage.com/survey/index.php/439367?lang=en"># Questionnaire for growers</a></li>
-                 <li><a href="https://wasisivillage.com/survey/index.php/616378?lang=en"># Questionnaire for cooperatives</a></li>
-              </ul>
            </div>
            <div class="col-lg-3 col-md-6 ml-auto mb-5 mb-lg-0">
               <h4>Contact Info</h4>
@@ -23,9 +15,6 @@
               <ul class="list-unstyled">
                  <li class="mb-2">
                     <span class="icon icon-Mail text-primary mr-2"></span> <a href="mailto:info@mykahawa.org">info@mykahawa.org</a>
-                 </li>
-                 <li class="mb-2">
-                    <span class="icon icon-Pointer text-primary mr-2"></span> P.O. Box 59541, 00200, Nairobi, Kenya
                  </li>
               </ul>
               <ul class="list-inline social social-rounded social-white mt-4">
@@ -42,7 +31,6 @@
   </section>
   <section class="u-py-40 bg-gray-v1">
      <div class="container">
-        <p class="mb-0 text-center">&copy; Wasisi Investments Company Ltd. All rights reserved.<br>
         <a href="/node/terms">Terms of service</a> | <a href="/node/privacy">Privacy policy</a> | <a href="/node/comment">Comment policy</a>
       </p>
      </div>
