--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="lawsafrica-site-header">
+<header class="mykahawa-site-header">
   <div class="container">
     <a href="https://mykahawa.org">
       <img alt="MyKahawa" src="/img/logo.svg" width="150px">
