--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
   }
 }
 
-.lawsafrica-site-header {
+.mykahawa-site-header {
   padding: 5px 0px;
   text-align: right;
   background-color: #e9ecef;
