--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
   </section>
   <section class="u-py-40 bg-gray-v1">
      <div class="container">
-        <a href="/node/terms">Terms of service</a> | <a href="/node/privacy">Privacy policy</a> | <a href="/node/comment">Comment policy</a>
+        <a href="/node/terms.html">Terms of service</a> | <a href="/node/privacy.html">Privacy policy</a> | <a href="/node/comment">Comment policy</a>
       </p>
      </div>
   </section>
