--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -877,3 +877,7 @@ a.bg-primary:hover {
 .slick-dots.dots-green > li.slick-active span {
     background: #192369;
 }
+
+.bg-dark {
+    background-color: #4B8030;
+}
