update terms, footer, privacy

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
            <div class="col-lg-4 mb-5 mb-lg-0">
               <h2 class="logo-brand-footer">MyKahawa</h2>
               <p class="u-my-40">
-                 MyKahawa is a Kenya Coffee business analytics and market intelligence tool that allows greater transparency and visibility into the Kenya Coffee market and industry.
+                 MyKahawa is a coffee business analytics and market information tool aimed at improving transparency and visibility of Kenya's coffee market.
               </p>
 
            </div>
