--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,9 @@
                  <li class="list-inline-item">
                     <a href="https://twitter.com/my_kahawa"><i class="fab fa-twitter"></i></a>
                  </li>
+                 <li class="list-inline-item">
+                  <a href="https://github.com/wasisi/mykahawa_gp"><i class="fab fa-github"></i></a>
+               </li>
               </ul>
            </div>
         </div>
