remove plugins update gems. add favicon files

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,13 +19,13 @@
               </ul>
               <ul class="list-inline social social-rounded social-white mt-4">
                  <li class="list-inline-item">
-                    <a href="https://www.facebook.com/mykahawa"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/mykahawa" target="_blank"><i class="fab fa-facebook"></i></a>
                  </li>
                  <li class="list-inline-item">
-                    <a href="https://twitter.com/my_kahawa"><i class="fab fa-twitter"></i></a>
+                    <a href="https://twitter.com/my_kahawa" target="_blank"><i class="fab fa-twitter"></i></a>
                  </li>
                  <li class="list-inline-item">
-                  <a href="https://github.com/wasisi/mykahawa_gp"><i class="fab fa-github"></i></a>
+                  <a href="https://github.com/wasisi/mykahawa_gp" target="_blank"><i class="fab fa-github"></i></a>
                </li>
               </ul>
            </div>
