--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,9 +8,13 @@
 
     <meta content="{% if page.description %}{{ page.description | escape }}{% else %}{{ site.description|escape }}{% endif %}" property="og:description">
     <meta content="{% if page.description %}{{ page.description | escape }}{% else %}{{ site.description|escape }}{% endif %}" property="description">
-
-    <link href="/favicon.png" rel="icon" type="image/png">
-    <link href="/img/logo-152.png" rel="apple-touch-icon" sizes="152x152">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Source+Sans+Pro:400,700" rel="stylesheet">
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
