--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,7 @@
                  </li>
               </ul>
               <ul class="list-inline social social-rounded social-white mt-4">
+                 <p>Show us some support by liking, following or starring us</p>
                  <li class="list-inline-item">
                     <a href="https://www.facebook.com/mykahawa" target="_blank"><i class="fab fa-facebook"></i></a>
                  </li>
