--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
     <div class="container">
       <a class="navbar-brand mr-5" href="/">
         <div class="d-none d-sm-block">MyKahawa</div>
-        <div class="d-block d-sm-none">Database</div>
+        <div class="d-block d-sm-none">MyKahawa</div>
       </a>
 
       <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
