--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,6 +33,9 @@
           <li class="nav-item mr-3">
             <a class="nav-link" href="/grades.html">Coffee Grades</a>
           </li>
+          <li class="nav-item mr-3">
+            <a class="nav-link" href="/node/subscribe">Subscribe</a>
+          </li>          
         </ul>
       </div>
     </div>
