--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -25,8 +25,10 @@
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet" media="screen, print">
 
+
 <!-- Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->   
+<link href="/css/strokegap/style.css" rel="stylesheet" media="screen, print">
   
     {% for alt in page.alternates %}
       <link href="{{ site.url }}{{ alt.url }}" hreflang="{{ alt.lang }}" rel="alternate">
