--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,7 +8,15 @@
 
     <meta content="{% if page.description %}{{ page.description | escape }}{% else %}{{ site.description|escape }}{% endif %}" property="og:description">
     <meta content="{% if page.description %}{{ page.description | escape }}{% else %}{{ site.description|escape }}{% endif %}" property="description">
-    
+  
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+     })(window,document,'script','dataLayer','GTM-N945XH3');</script>
+     <!-- End Google Tag Manager -->
+
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->    
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -39,6 +47,11 @@
     {% endfor %}
   </head>
   <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N945XH3"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
     {% include header.html %}
 
     <div id="main-content">
@@ -52,14 +65,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <script src="/js/main.js"></script>
-
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-N945XH3');</script>
-    <!-- End Google Tag Manager -->
 
     {% for js in layout.extra_js %}
       <script src="{{ js }}"></script>
