change navbar color

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 </header>
 
 <header id="header">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-header" role="navigation">
 
     <div class="container">
       <a class="navbar-brand mr-5" href="/">
