--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -17,7 +17,13 @@
      })(window,document,'script','dataLayer','GTM-N945XH3');</script>
      <!-- End Google Tag Manager -->
 
-  <!-- Favicon
+     <!-- Mapbox: https://docs.mapbox.com/mapbox-gl-js/api/
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->      
+     <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
+     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
+     <!-- End Mapbox -->
+
+     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->    
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
