--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,10 +28,10 @@
             <a class="nav-link" href="/dealers.html">Dealers</a>
           </li>
           <li class="nav-item mr-3">
-            <a class="nav-link" href="/transactions.html">Transactions</a>
+            <a class="nav-link" href="/transactions.html">Market</a>
           </li>
           <li class="nav-item mr-3">
-            <a class="nav-link" href="/grades.html">Coffee Grades</a>
+            <a class="nav-link" href="/grades.html"> Kenya coffee</a>
           </li>
           <li class="nav-item mr-3">
             <a class="nav-link" href="/node/subscribe">Subscribe</a>
