--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -40,12 +40,12 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Source+Sans+Pro:400,700" rel="stylesheet">
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" rel="stylesheet">
-    <link href="/css/main.css" rel="stylesheet" media="screen, print">
+    <link href="/theme/css/main.css" rel="stylesheet" media="screen, print">
 
 
 <!-- Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->   
-<link href="/css/strokegap/style.css" rel="stylesheet" media="screen, print">
+<link href="/theme/css/strokegap/style.css" rel="stylesheet" media="screen, print">
   
     {% for alt in page.alternates %}
       <link href="{{ site.url }}{{ alt.url }}" hreflang="{{ alt.lang }}" rel="alternate">
@@ -73,7 +73,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <script src="/js/main.js"></script>
+    <script src="/theme/js/main.js"></script>
 
     {% for js in layout.extra_js %}
       <script src="{{ js }}"></script>
