--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="mykahawa-site-header">
   <div class="container">
     <a href="https://mykahawa.org">
-      <img alt="MyKahawa" src="/img/logo.svg" width="150px">
+      <img alt="MyKahawa" src="/theme/img/logo.svg" width="150px">
     </a>
   </div>
 </header>
