--- a/theme/_sass/_site.scss
+++ b/theme/_sass/_site.scss
@@ -14,7 +14,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 
 #header {
   a.navbar-brand {
-    background-image: url(/img/logo-md-inv.png);
+    background-image: url(/theme/img/logo-md-inv.png);
     background-repeat: no-repeat;
     background-position: 0px 3px;
     background-size: 35px;
