placeholders for kenya coffee

--- a/_includes/structure/footer.html
+++ b/_includes/structure/footer.html
@@ -6,6 +6,7 @@
               <p class="u-my-40">
                  MyKahawa is a coffee business analytics and market information tool aimed at improving transparency and visibility of Kenya's coffee market.
               </p>
+              {% include ko-fi.html %}
 
            </div>
            <div class="col-lg-3 col-md-6 ml-auto mb-5 mb-lg-0">
