--- a/_includes/structure/nav.html
+++ b/_includes/structure/nav.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="/transactions.html">Market</a>
           </li>
           <li class="nav-item mr-3">
-            <a class="nav-link" href="/grades.html"> Kenya coffee</a>
+            <a class="nav-link" href="/kenya-coffee.html"> Kenya coffee</a>
           </li>
           <li class="nav-item mr-3">
             <a class="nav-link" href="/node/subscribe">Subscribe</a>
